--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,10 @@
     @apply flex justify-center m-5;
   }
   .button1 {
-    @apply bg-primary dark:bg-primary_dark border-2 rounded-md m-2 py-2 px-4 self-end;
+    @apply bg-primary dark:bg-primary_dark border-2 rounded-md my-2 py-2 px-4 self-end;
+  }
+  .input1 {
+    @apply rounded-md border-slate-200 shadow-sm hover:shadow-lg transition-shadow;
   }
 }
 
