--- a/src/index.css
+++ b/src/index.css
@@ -16,20 +16,20 @@
 
 @layer components {
   .heading1 {
-    @apply text-3xl py-3;
+    @apply text-3xl py-4;
   }
   .heading2 {
-    @apply text-2xl py-3;
+    @apply text-2xl py-4;
   }
   .heading3 {
-    @apply text-xl py-3;
+    @apply text-xl py-4;
   }
 
   .button-container {
     @apply flex justify-center m-5;
   }
   .button1 {
-    @apply bg-primary dark:bg-primary_dark border-2 rounded-md my-2 py-2 px-4 self-end;
+    @apply bg-primary dark:bg-primary_dark rounded-full my-2 py-2 px-4 text-white font-semibold;
   }
   .input1 {
     @apply rounded-md border-slate-200 shadow-sm hover:shadow-lg transition-shadow;
@@ -37,74 +37,89 @@
   .component-container {
     @apply bg-white rounded-lg shadow dark:bg-gray-900 m-4;
   }
-}
-
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  .section-container {
+    @apply xl:w-3/5 lg:w-4/5 p-5 flex flex-col items-center self-center;
   }
-  a:hover {
-    color: #747bff;
+  .nav {
+    @apply flex justify-between w-full items-center py-2 px-4;
   }
-  button {
-    background-color: #f9f9f9;
+  .blob {
+    border-radius: 53% 47% 22% 78% / 65% 46% 54% 35%;
   }
-} */
+  .team-photo1 {
+    border-radius: 13% 0 52% 78% / 75% 0 50% 45%;
+  }
+  .alex {
+    width: 150px;
+    height: 150px;
+    background-image: url(/profilepic1.png);
+    background-size: 200%;
+    background-position: 52% 5%;
+    background-repeat: no-repeat;
+  }
+
+  /* ----- animations ----- */
+  .roll-in1 {
+    animation: rollIn 3s ease 0s 1 normal forwards;
+  }
+  .roll-in2 {
+    animation: rollIn 3.2s ease 0s 1 normal forwards;
+  }
+  .roll-in3 {
+    animation: rollIn 3.4s ease 0s 1 normal forwards;
+  }
+  .fade-in {
+    animation: fadeIn 3s ease 2s 1 normal backwards;
+  }
+}
+@keyframes rollIn {
+  0% {
+    animation-timing-function: ease-in;
+    opacity: 0;
+    transform: translateX(350px);
+  }
+
+  60% {
+    animation-timing-function: ease-out;
+    opacity: 1;
+    transform: translateX(0) rotateZ(-720deg);
+  }
+
+  70% {
+    animation-timing-function: ease-in;
+    transform: translateX(65px) rotateZ(-600deg);
+  }
+
+  82% {
+    animation-timing-function: ease-out;
+    transform: translateX(0) rotateZ(-720deg);
+  }
+
+  88% {
+    animation-timing-function: ease-in;
+    transform: translateX(28px) rotateZ(-660deg);
+  }
+
+  93% {
+    animation-timing-function: ease-out;
+    transform: translateX(0) rotateZ(-720deg);
+  }
+
+  96% {
+    animation-timing-function: ease-in;
+    transform: translateX(8px) rotateZ(-690deg);
+  }
+
+  100% {
+    animation-timing-function: ease-out;
+    transform: translateX(0) rotateZ(-720deg);
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
